--- a/LosvRLConsole/LosvRLConsole.csproj
+++ b/LosvRLConsole/LosvRLConsole.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NrknLib.ConsoleView">
+      <HintPath>..\..\NrknLib\Console\ConsoleView\bin\Debug\NrknLib.ConsoleView.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LosvRLLib\LosvRLLib.csproj">
+      <Project>{AF4EFAE6-625D-455D-AAF3-131724866C33}</Project>
+      <Name>LosvRLLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
